cabal-version:      2.4
name:               translator2
version:            0.1.0.0

author:             modderme123
maintainer:         modderme123@gmail.com

extra-source-files: README.md

executable translator2
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      text ^>=1.2.4.1,
                      mtl ^>=2.2.2,
                      fmt ^>=0.6.3.0,
                      filepath ^>=1.4.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
