cabal-version:      2.4
name:               translator
version:            0.1.0.0

author:             modderme123
maintainer:         modderme123@gmail.com

extra-source-files: README.md

executable translator
    main-is:          Main.hs

    ghc-options:      -Wall
                      -Wpartial-fields
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Widentities
                      -funclutter-valid-hole-fits

    default-extensions:  OverloadedStrings,
                         NoImplicitPrelude

    build-depends:    base ^>=4.16.0.0,
                      text ^>=1.2.4.1,
                      mtl ^>=2.2.2,
                      filepath ^>=1.4.2.1,
                      basic-prelude ^>=0.7.0,
                      directory ^>=1.3.7.0
    hs-source-dirs:   app
    default-language: Haskell2010
