cabal-version:      3.4
name:               translator
version:            0.1.0.0

author:             modderme123
maintainer:         modderme123@gmail.com

extra-source-files: README.md

executable translator
    main-is:          Main.hs

    ghc-options:      -Wall
                      -Wpartial-fields
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Widentities
                      -funclutter-valid-hole-fits

    default-extensions:  OverloadedStrings,
                         NoImplicitPrelude

    build-depends:    base ^>=4.18.0.0,
                      text ^>=2.0.2,
                      mtl ^>=2.3.1,
                      filepath ^>=1.4.100.4,
                      basic-prelude ^>=0.7.0,
                      directory ^>=1.3.8.1
    hs-source-dirs:   app
    default-language: Haskell2010
